# arculusChallenge

./: Dockerfile  Readme.md  docker-compose.yml  pipelineCheck.py  pyproject.toml  testpest.py
src/pipeline_check/: get_project.py  jobswithwarns.py  main.py  pipelines.py  reporter.py
